version/0.38/_sources/api/solver/_autosummary/settings/cell_zone_conditions.rst.txt
:orphan:

.. _cell_zone_conditions:

cell_zone_conditions
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.cell_zone_conditions
    :show-inheritance:

.. rubric:: Attributes

======================   ============================================

Attribute                                                     Summary

======================   ============================================
:ref:`fluid <fluid_1>`       Settings for cell zone condition object.

:ref:`solid <solid_2>`       Settings for cell zone condition object.

======================   ============================================

.. rubric:: Methods

====================================================================================   =================================================================================================

Method                                                                                                                                                                           Summary

====================================================================================   =================================================================================================
:ref:`copy <copy_1>`                                                                                                                           Copy boundary conditions to another zone.

:ref:`set_zone_type <set_zone_type>`                                                                                                                                    Set a zone type.

:ref:`activate_cell_zone <activate_cell_zone>`                                                                                                                   Activate a cell thread.

:ref:`mrf_to_sliding_mesh <mrf_to_sliding_mesh>`                                                                                    Change motion specification from MRF to moving mesh.

:ref:`convert_all_solid_mrf_to_solid_motion <convert_all_solid_mrf_to_solid_motion>`                               Change all solid zones motion specification from MRF to solid motion.

:ref:`copy_mrf_to_mesh_motion <copy_mrf_to_mesh_motion>`                                   Copy motion variable values for origin, axis and velocities from Frame Motion to Mesh Motion.

:ref:`copy_mesh_to_mrf_motion <copy_mesh_to_mrf_motion>`                                   Copy motion variable values for origin, axis and velocities from Mesh Motion to Frame Motion.

:ref:`dual_potential_zone <dual_potential_zone>`                                                                                                         Dual-potential zone assignment.

:ref:`adjacency <adjacency>`                                                                 Rename options to be performed on selected cell zone(s) and corresponding adjacent face(s).

====================================================================================   =================================================================================================

.. rubric:: Included in:

====================   ==================================================================================================================================

Parent                                                                                                                                            Summary

====================   ==================================================================================================================================
:ref:`setup <setup>`       Provides access to all primary setup options including general settings, models, boundary conditions and solver configuration.

====================   ==================================================================================================================================

